fix: Modify validation exception to handle login exceptions personally